# framework.api.wifi-direct

./: AUTHORS  CMakeLists.txt  capi-network-wifi-direct.pc.in  project.config  test-wifi-direct.manifest
debian/: capi-network-wifi-direct-dev.install  changelog  control  rules
doc/: wifi_direct_doc.h
include/: wifi-direct-internal.h  wifi-direct.h
packaging/: capi-network-wifi-direct.spec
src/: CMakeLists.txt  capi-network-wifi-direct.pc.in  wifi-direct-client-proxy.c
src/include/: wifi-direct-client-proxy.h  wifi-direct-ipc.h
test/: CMakeLists.txt  test-wifi-direct.c  test.c
