CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(TEST_APP_NAME "test-wifi-direct")

SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
INCLUDE_DIRECTORIES(${INC_DIR})

IF(NOT DEFINED BINDIR)
        SET(BINDIR "${PREFIX}/bin")
ENDIF(NOT DEFINED BINDIR)

INCLUDE(FindPkgConfig)
pkg_check_modules(TEST_APP_REQ_PKGS REQUIRED glib-2.0)

IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

IF(TIZEN_FEATURE_SERVICE_DISCOVERY)
        ADD_DEFINITIONS(-DTIZEN_FEATURE_SERVICE_DISCOVERY)
        SET(FEATURES "${FEATURES} -DTIZEN_FEATURE_SERVICE_DISCOVERY")
ENDIF(TIZEN_FEATURE_SERVICE_DISCOVERY)
IF(TIZEN_FEATURE_WIFI_DISPLAY)
        ADD_DEFINITIONS(-DTIZEN_FEATURE_WIFI_DISPLAY)
        SET(FEATURES "${FEATURES} -DTIZEN_FEATURE_WIFI_DISPLAY")
ENDIF(TIZEN_FEATURE_WIFI_DISPLAY)
IF(TIZEN_TV)
        ADD_DEFINITIONS(" -DTIZEN_TV")
        MESSAGE("add -DTIZEN_TV")
ENDIF(TIZEN_TV)

FOREACH (flag ${TEST_APP_REQ_PKGS_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${CFLAGS}")

ADD_EXECUTABLE(${TEST_APP_NAME}
        ${CMAKE_CURRENT_SOURCE_DIR}/test-wifi-direct.c
)

TARGET_LINK_LIBRARIES(${TEST_APP_NAME}
        ${TEST_APP_REQ_PKGS_LDFLAGS} "wifi-direct")

#Install
INSTALL(TARGETS ${TEST_APP_NAME} DESTINATION ${BINDIR})

